Update birthday messages in index.html

--- a/index.html
+++ b/index.html
@@ -30,13 +30,16 @@
         <div id="wrap">
             <div id="text">
                 <div id="code">
-                    <span class="say">Hey you 💞</span><br>
-                    <span class="say">Happy Birthday 🎈</span><br>
+                    <span class="say">Hey Pandi 💞</span><br>
+                    <span class="say">Happy Birthday vro🎈</span><br>
                     <span class="say">May God bless you 🍀</span><br>
                     <span class="say">And give u many happiness 💕</span><br>
                     <span class="say">Just saying... you're pretty awesome ❤️</span><br>
                     <span class="say">Sending good vibes and maybe a wink 😏</span><br>
-                    <span class="say">Hope u have a great day today ❤️😘</span><br>
+                    <span class="say">you Born beautiful. Living unforgettable 😍</span><br>
+					<span class="say">Your birthday reminds me how lucky I am that the universe chose you for me Sam aunty❤️</span><br>
+					<span class="say">If I had to choose you in every lifetime, I would do it without hesitation. Happy Birthday to my forever🥹😍</span><br>
+					<span class="say">From Ur Pandi JD🐖❤️</span><br>
                 </div>
             </div>
             <div id="clock-box">
